# P1_G7_packagedelivery

./: flowchart.drawio
src/: CMakeLists.txt  astar_helper_functions.c  astar_helper_functions.h  bst_functions.c  bst_functions.h  create_routes.c  create_routes.h  delivery_algorithm.c  delivery_algorithm.h  delivery_sim.c  delivery_sim.h  import-addresses.c  package_distribution.c  package_distribution.h  resource_calculation.c  resource_calculation.h  run_program.c
test/: test_functions.c
